<resources>
    <string name="app_name">DanaTest</string>
    <string name="topic_picker_title">Доступные темы</string>

<!--test_picker-->
    <string name="home_title">Доступные тесты</string>
    <string name="test1_title">Прямой перевод</string>
    <string name="test1_description">Укажите корректный перевод\n
    предложенного слова</string>
    <string name="test2_title">Вставить слово</string>
    <string name="test2_description">Вставьте подходящее слово\n
    в предложение </string>
    <string name="test3_title">Четыре варианта</string>
    <string name="test3_description">Выберите верный перевод слова\n
    из предложенных вариантов</string>
    <string name="test4_title">Перемешать</string>
    <string name="test4_description">Угадайте слово, буквы в котором\n
    случайно перемешаны</string>
    <string name="topics_counter">0/5</string>



    <string name="words_counter">Количество слов: </string>
    <string name="test_passed_title">Тест пройден</string>
    <string name="result_action_again_title">Заново</string>
    <string name="result_action_to_topics_title">В темы</string>
    <string name="result_action_forward_title">Далее</string>
    <string name="result_action_troubleshooting_title">Ошибки</string>


</resources>