<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_screen"
    android:padding="10dp"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <ImageView
        android:id="@+id/iv_exit_app"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_exit_app_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:scaleType="fitEnd"
        android:src="@drawable/icon_menu_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/shadow"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/home_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <Button
        android:id="@+id/btn_test1"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:background="@color/blue_active"
        android:gravity="start|center"
        android:paddingStart="15dp"
        android:shadowColor="@color/shadow"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/test1_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:shadowColor="@color/shadow"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/test1_description"
        android:textColor="@color/blue_active"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_test1" />

    <Button
        android:id="@+id/btn_test2"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@color/blue_active"
        android:gravity="start|center"
        android:paddingStart="15dp"
        android:shadowColor="@color/shadow"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/test2_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:shadowColor="@color/shadow"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/test2_description"
        android:textColor="@color/blue_active"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_test2" />

    <Button
        android:id="@+id/btn_test3"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@color/blue_active"
        android:gravity="start|center"
        android:paddingStart="15dp"
        android:shadowColor="@color/shadow"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/test3_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:paddingStart="15dp"
        android:paddingTop="10dp"

        android:paddingEnd="10dp"
        android:shadowColor="@color/shadow"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/test3_description"
        android:textColor="@color/blue_active"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_test3" />

    <Button
        android:id="@+id/btn_test4"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:background="@color/blue_active"
        android:gravity="start|center"
        android:paddingStart="15dp"
        android:shadowColor="@color/shadow"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/test4_title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:paddingStart="15dp"

        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:shadowColor="@color/shadow"
        android:shadowDy="1"
        android:shadowRadius="1"
        android:text="@string/test4_description"
        android:textColor="@color/blue_active"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_test4" />


</androidx.constraintlayout.widget.ConstraintLayout>